# cmdocker-tmpl

./: .dockerignore  .gitignore  .gitlab-ci .yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Dockerfile  LICENSE  README.md  build.cmake  build.local.cmake  deps.sh  docker-compose.yml
app/: CMakeLists.txt
app/include/: Foo.h
app/src/: CMakeLists.txt  Foo.cpp  main.cpp
app/test/: CMakeLists.txt  fooTest.cpp
backend/: CMakeLists.txt
backend/benchmark/: CMakeLists.txt  testBenchmark.cpp
backend/include/: basic.h
backend/src/: CMakeLists.txt
backend/test/: CMakeLists.txt  exampleTest.cpp  testTest.cpp
docker/arm-linux-gnueabihf/: Dockerfile
docker/clang-3.9/: Dockerfile
docker/clang-3.9-clazy/: Dockerfile
docker/clang-4.0/: Dockerfile
docker/clang-4.0-clazy/: Dockerfile
docker/clang-5.0/: Dockerfile
docker/gcc-5/: Dockerfile  docker-entrypoint.sh
docker/gcc-6/: Dockerfile  docker-entrypoint.sh
docker/gcc-7/: Dockerfile
docker/mingw-w64-i686/: Dockerfile
docker/mingw-w64-x86-64/: Dockerfile
docker/msvc-9.0/: Dockerfile  docker-entrypoint.sh
docker/wine32-gcc/: Dockerfile
docker/wine64-gcc/: Dockerfile
libs/benchpress/src/benchpress/: benchpress.hpp
libs/doctest/doctest/: doctest.h
scripts/: build.sh  configure.sh  entrypoint.sh  getdockerexit.sh  install-deps.sh  prebuild.sh  run-tests.sh  travis.before_script.sh  travis.install.sh  travis.script.sh
